--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.port = 8091
+spring.port = 8080
 
 spring.mvc.view.prefix = /WEB-INF/jsp/
 spring.mvc.view.suffix = .jsp
 
-spring.datasource.url = jdbc:mysql://localhost:3306/todo_app
+spring.datasource.url = jdbc:mysql://localhost:3306/todo
 spring.datasource.username = root
 spring.datasource.password = root
 
